--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <tbody><tr>
             <td valign="middle" align="center">
                 <p>
-                    <img src="/web/20230301021810im_/https://illicit.services/ovo.png" border="0">
+                    <img src="https://illicit.services/ovo.png" border="0">
                 </p>
                 <p>
                     OvO is a global collective of service providers and provided services. Its members share knowledge, resources, and support with the aim of building sustainable, independent online businesses.                                                                                                                                                                             
@@ -32,11 +32,11 @@
                     <strong>Abuse</strong>: OvO's network hosts several free speech and cryptocurrency services. To report abuse, e-mail miyako // miyako.rocks and include all applicable logs and evidence.
                 </p>
 		<p>
-		    <strong>Thanks</strong>: Special thanks to <a href="https://web.archive.org/web/20230301021810/https://zwiebelfreunde.de/">Zwiebelfreunde e.V.</a> for hosting support.
+		    <strong>Thanks</strong>: Special thanks to <a href="https://zwiebelfreunde.de/">Zwiebelfreunde e.V.</a> for hosting support.
 		</p>
                 <p>
                     Public Services: <br/>
-                    &emsp; <a href="https://web.archive.org/web/20230301021810/https://search.illicit.services/">Public Records Search</a>
+                    &emsp; <a href="https://search.illicit.services/">Public Records Search</a>
                 </p>
                     
                 <pre>OvO Systems Ltd.
