--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <tbody><tr>
             <td valign="middle" align="center">
                 <p>
-                    <img src="https://illicit.services/ovo.png" border="0">
+                    <img src="ovo.png" border="0">
                 </p>
                 <p>
                     OvO is a global collective of service providers and provided services. Its members share knowledge, resources, and support with the aim of building sustainable, independent online businesses.                                                                                                                                                                             
